--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 # Folders
 _obj
 _test
+.idea/
 
 # Architecture specific extensions/prefixes
 *.[568vq]
@@ -25,3 +26,5 @@ _testmain.go
 
 **.swp
 *.sw*
+*.iml
+
